--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello World</title>
+        <!-- Page about me -->
+        <title>Paulo Alves</title>
     </head>
     <body>
-        <h2>Hello World!!</h2>
-        <h3>This is my first website</h3>
+        <h1>Paulo Alves</h1>
+
         <article>
-            <h4>This is the post title</h4>
-            <p>This is some content inside the post</p>
-            <h5>Author: me</h5>
+            <h3>About me</h3>
+            <p><strong>It’s all good in the woods.</strong> I love being
+                outdoors, especially when I have friends and a camera with me. Even though I love being a <a href="https://www.estudiolasso.com/" target="_new"><abbr title="Enter Estudio Lasso Website">product photographer</abbr></a>, I also love
+                photographing nature. So much that I even created a website to sell my prints.  It is called <a href="https://www.alvesfineart.com/" target="_new">Alves Fine Art</a>. 
+            </p>
+            <p>At a first glance, regarding my personality, you might think I’m introverted but don’t be fooled, the more I get comfortable with those around me, the more I can get you laughing, by me or of me. I’m always open to <em>new experiences</em>, opportunities to meet new people are valuable to me. So what is left to say is, my name is Paulo Alves and I`m looking forward to meeting you.
+            </p>
+           
+            <p>&nbsp;</p>
+
+            <blockquote>"We are what we repeatedly do. Excellence, then, is not an act, but a habit." – Will Durant</blockquote>
         </article>
+        
+        <p>&nbsp;</p>
+
+        <p>&nbsp;</p>
+
+        <footer>
+            <p>Copyright 2021 <sup>©</sup> by Paulo Alves</p>
+            <p><a href="mailto:deso0152@algonquinlive.com">deso0152@algonquinlive.com</a></p>
+          </footer
     </body>
 </html>
