--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <!-- Page about me -->
-        <title>Paulo Alves</title>
-    </head>
-    <body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paulo Alves</title>
+</head>
+
+<body>
+    <header>
         <h1>Paulo Alves</h1>
 
-        <article>
-            <h3>About me</h3>
-            <p><strong>It’s all good in the woods.</strong> I love being
-                outdoors, especially when I have friends and a camera with me. Even though I love being a <a href="https://www.estudiolasso.com/" target="_new"><abbr title="Enter Estudio Lasso Website">product photographer</abbr></a>, I also love
-                photographing nature. So much that I even created a website to sell my prints.  It is called <a href="https://www.alvesfineart.com/" target="_new">Alves Fine Art</a>. 
-            </p>
-            <p>At a first glance, regarding my personality, you might think I’m introverted but don’t be fooled, the more I get comfortable with those around me, the more I can get you laughing, by me or of me. I’m always open to <em>new experiences</em>, opportunities to meet new people are valuable to me. So what is left to say is, my name is Paulo Alves and I`m looking forward to meeting you.
-            </p>
-           
-            <p>&nbsp;</p>
+        <a href="./notes.html">Notes</a>
+    </header>
 
-            <blockquote>"We are what we repeatedly do. Excellence, then, is not an act, but a habit." – Will Durant</blockquote>
-        </article>
-        
-        <p>&nbsp;</p>
+    <article>
+        <h3>About me</h3>
+        <p><strong>It’s all good in the woods.</strong> I love being
+            outdoors, especially when I have friends and a camera with me. Even though I love being a <a
+                href="https://www.estudiolasso.com/" target="blank"><abbr title="Enter Estudio Lasso Website">product
+                    photographer</abbr></a>, I also love
+            photographing nature. So much that I even created a website to sell my prints. It is called <a
+                href="https://www.alvesfineart.com/" target="blank">Alves Fine Art</a>.
+        </p>
+        <p>At a first glance, regarding my personality, you might think I’m introverted but don’t be fooled, the more I
+            get comfortable with those around me, the more I can get you laughing, by me or of me. I’m always open to
+            <em>new experiences</em>, opportunities to meet new people are valuable to me. So what is left to say is, my
+            name is Paulo Alves and I`m looking forward to meeting you.
+        </p>
 
-        <p>&nbsp;</p>
+        <h4>My hobbies</h4>
+        <ul>
+            <li>Photography</li>
+            <li>Ride a bike</li>
+        </ul>
 
-        <footer>
-            <p>Copyright 2021 <sup>©</sup> by Paulo Alves</p>
-            <p><a href="mailto:deso0152@algonquinlive.com">deso0152@algonquinlive.com</a></p>
-          </footer
-    </body>
+        <blockquote>"We are what we repeatedly do. Excellence, then, is not an act, but a habit." – Will Durant
+        </blockquote>
+    </article>
+
+    <p><img src="images/me.jpg" alt="Paulo Alves photo"></p>
+
+    <footer>
+        <p>Copyright 2021 <sup>©</sup> by Paulo Alves</p>
+        <p><a href="mailto:deso0152@algonquinlive.com">deso0152@algonquinlive.com</a></p>
+    </footer>
+</body>
+
 </html>
