--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         <h4>My hobbies</h4>
         <ul>
+            <li>Cycling</li>
             <li>Photography</li>
-            <li>Ride a bike</li>
         </ul>
 
         <blockquote>"We are what we repeatedly do. Excellence, then, is not an act, but a habit." – Will Durant
