HTML prepared to CSS

--- a/index.html
+++ b/index.html
@@ -5,47 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paulo Alves</title>
+    <title>Paulo Alves - Product Photographer</title>
+
+    <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
-        <h1>Paulo Alves</h1>
+    <div class="container">
+        <header>
+            <h1>Paulo Alves</h1>
+            <nav>
+                <ul>
+                    <li class="current"><a href="index.html">HOME</a></li>
+                    <li><a href="./notes.html">NOTES</a></li>
+                </ul>
+            </nav>
+        </header>
 
-        <a href="./notes.html">Notes</a>
-    </header>
+        <article>
+            <h2>About me</h2>
+            <p><strong>It’s all good in the woods.</strong> I love being
+                outdoors, especially when I have friends and a camera with me. Even though I love being a <a
+                    href="https://www.estudiolasso.com/" target="blank"><abbr title="Enter Estudio Lasso Website">product
+                        photographer</abbr></a>, I also love photographing nature. So much that I even created a website to sell my prints. It is called <a
+                    href="https://www.alvesfineart.com/" target="blank"><abbr title="Enter Alves Fine Art Website">Alves Fine Art</abbr></a>.
+            </p>
+            <p>At a first glance, regarding my personality, you might think I’m introverted but don’t be fooled, the more I
+                get comfortable with those around me, the more I can get you laughing, by me or of me. I’m always open to
+                new experiences, opportunities to meet new people are valuable to me. So what is left to say is, my
+                name is Paulo Alves and I`m looking forward to meeting you.
+            </p>
 
-    <article>
-        <h3>About me</h3>
-        <p><strong>It’s all good in the woods.</strong> I love being
-            outdoors, especially when I have friends and a camera with me. Even though I love being a <a
-                href="https://www.estudiolasso.com/" target="blank"><abbr title="Enter Estudio Lasso Website">product
-                    photographer</abbr></a>, I also love
-            photographing nature. So much that I even created a website to sell my prints. It is called <a
-                href="https://www.alvesfineart.com/" target="blank">Alves Fine Art</a>.
-        </p>
-        <p>At a first glance, regarding my personality, you might think I’m introverted but don’t be fooled, the more I
-            get comfortable with those around me, the more I can get you laughing, by me or of me. I’m always open to
-            <em>new experiences</em>, opportunities to meet new people are valuable to me. So what is left to say is, my
-            name is Paulo Alves and I`m looking forward to meeting you.
-        </p>
+            <h4>My hobbies</h4>
+            <ul>
+                <li>Cycling</li>
+                <li>Photography</li>
+                <li>Learning</li>
+                <li>Traveling</li>
+            </ul>
 
-        <h4>My hobbies</h4>
-        <ul>
-            <li>Cycling</li>
-            <li>Photography</li>
-        </ul>
+            <blockquote>"We are what we repeatedly do. Excellence, then, is not an act, but a habit." – Will Durant
+            </blockquote>
+        </article>
 
-        <blockquote>"We are what we repeatedly do. Excellence, then, is not an act, but a habit." – Will Durant
-        </blockquote>
-    </article>
-
-    <p><img src="images/me.jpg" alt="Paulo Alves photo"></p>
-
-    <footer>
-        <p>Copyright 2021 <sup>©</sup> by Paulo Alves</p>
-        <p><a href="mailto:deso0152@algonquinlive.com">deso0152@algonquinlive.com</a></p>
-    </footer>
+        <p><img src="images/me.jpg" alt="Paulo Alves' photo" id="my-image"></p><div class="desc">Muskoka Woods, 2016</div>
+        
+        <p>&nbsp;</p>
+        
+        <footer>
+            <p>Copyright 2021 <sup>©</sup> by Paulo Alves</p>
+                <p><a href="mailto:deso0152@algonquinlive.com">deso0152@algonquinlive.com</a></p>
+        </footer>
+    </div>
 </body>
 
 </html>
