--- a/notes.html
+++ b/notes.html
@@ -6,14 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notes</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <header>
-    <h1>Notes</h1>
-
-    <a href="./index.html">Home</a>
-  </header>
+  <div class="container">
+    <header>
+        <h1>Paulo Alves</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li class="current"><a href="./notes.html">NOTES</a></li>
+            </ul>
+        </nav>
+    </header>
 
   <h2>HTML tags I learnt</h2>
   <dl>
@@ -38,6 +44,7 @@
       should indicate the link's destination. If the href attribute is present, pressing the enter key while focused on
       the &lt;a&gt; element will activate it.</dd>
   </dl>
+</div>
 </body>
 
 </html>
